fixed scrollbar completely and partialMessage halfway through

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -71,7 +71,7 @@ body {
   /* overflow-y: auto; */
   background: rgb(25, 25, 25);
   border-radius: 10px;
-  max-width: 430px;
+  max-width: 50%
 }
 
 .messages-box {
